footer: fixing issue about cols alignment

--- a/css/style.css
+++ b/css/style.css
@@ -227,4 +227,7 @@ footer a {
         width: 210px;
         height: auto;
     }
+    footer ul {
+        text-align: end;
+    }
 }
